fixed username/channel name too long, css in socialPage.tsx

--- a/src/front/src/Components/css/Chat.css
+++ b/src/front/src/Components/css/Chat.css
@@ -102,19 +102,13 @@
 
 .channel-invite {
     position: absolute;
-    border: 6px solid white;
-    border-top: 2px solid white;
-    border-bottom: 3px solid white;
-    left: calc(0.8rem + 0.65vw);
-    top: calc(6vh + 6px);
-    width: 19vw;
-    /* height: calc(100vh - (100vh - 9.6rem) + 8.1rem); */
-    height: 19vh;
-    overflow-y: auto;
-    /* margin-top: calc(100vh - 9.9rem - 8.4rem - 10.8rem + 1.2rem + 3px - 4rem); */
-    margin-top: 61.6vh;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    font-size: 1.1em;
+    border: 3px solid white;
+    top: 1.4em;
+    left: 25vw;
+    height: 60px;
+    width: 60px;
+    background-color: black;
 }
 
 .channel-quit {
